--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ ul {
 
 .heading-index {
   background-image: url(/images/milkyway.jpg);
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   min-width: 100%;
   min-height: 650px;
