--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,91 @@ header {
   z-index: 1000;
 }
 
+.heading-index {
+  background-image: url(/images/milkyway.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-width: 100%;
+  min-height: 800px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: center;
+}
+
+.heading-index h1,
+.heading-index p {
+  color: #edffc5;
+}
+
+.heading-index .cta {
+  color: #141329;
+  position: relative;
+  padding: 15px;
+}
+.heading-index {
+  background-image: url(/images/milkyway.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: center;
+}
+
+.heading-index h1,
+.heading-index p {
+  color: #edffc5;
+}
+
+.type-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.type-h1 {
+  width: 18ch;
+  animation-name: typing;
+  animation-duration: 2s;
+  animation-timing-function: steps(18, jump-end);
+  /*animation-name: blink;
+  animation-duration: 0.7s;
+  animation-timing-function: step-end;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;*/
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 4px solid;
+  font-family: "League Spartan";
+  font-size: 2em;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 18;
+  }
+}
+
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
+}
+
+.heading-index .cta {
+  color: #141329;
+  position: relative;
+  padding: 15px;
+}
+
 .heading h1 {
   padding-top: 50px;
 }
@@ -99,29 +184,6 @@ ul {
 .cta-card {
   text-align: center;
   margin: 20px;
-  padding: 15px;
-}
-
-.heading-index {
-  background-image: url(/images/milkyway.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  min-width: 100%;
-  min-height: 650px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  text-align: center;
-}
-
-.heading-index h1,
-.heading-index p {
-  color: #edffc5;
-}
-
-.heading-index .cta {
-  color: #141329;
-  position: relative;
   padding: 15px;
 }
 
