--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* GLOBAL ---------- */
+
 body {
   font-family: "League Spartan", sans-serif;
   max-width: 1000px;
@@ -7,100 +9,30 @@ body {
 header {
   background-color: #edffc5;
   padding-bottom: 5px;
-  justify-content: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   min-width: 100%;
   position: fixed;
   top: 0px;
   z-index: 1000;
+  max-height: 50px;
 }
 
-.heading-index {
-  background-image: url(/images/milkyway.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  min-width: 100%;
-  min-height: 800px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  text-align: center;
-}
-
-.heading-index h1,
-.heading-index p {
-  color: #edffc5;
-}
-
-.heading-index .cta {
-  color: #141329;
-  position: relative;
-  padding: 15px;
-}
-.heading-index {
-  background-image: url(/images/milkyway.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  min-width: 100%;
+.heading {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  text-align: center;
-}
-
-.heading-index h1,
-.heading-index p {
-  color: #edffc5;
-}
-
-.type-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.type-h1 {
-  width: 18ch;
-  animation-name: typing;
-  animation-duration: 2s;
-  animation-timing-function: steps(18, jump-end);
-  /*animation-name: blink;
-  animation-duration: 0.7s;
-  animation-timing-function: step-end;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;*/
-  white-space: nowrap;
-  overflow: hidden;
-  border-right: 4px solid;
-  font-family: "League Spartan";
-  font-size: 2em;
-}
-
-@keyframes typing {
-  from {
-    width: 0;
-  }
-  to {
-    width: 18;
-  }
-}
-
-@keyframes blink {
-  50% {
-    border-color: transparent;
-  }
-}
-
-.heading-index .cta {
-  color: #141329;
-  position: relative;
-  padding: 15px;
+  background-color: black;
 }
 
 .heading h1 {
   padding-top: 50px;
+}
+
+.heading h1,
+.heading h2,
+.heading p {
+  color: #edffc5;
 }
 
 h1,
@@ -158,17 +90,18 @@ ul {
   list-style: none;
 }
 
-#hamburger:checked ~ nav {
-  display: block;
-}
-
 #hamburger {
   display: none;
+}
+
+#hamburger:checked ~ nav {
+  display: block;
 }
 
 .fa,
 .fas {
   font-size: 30px;
+  padding-right: 10px;
 }
 
 .heading-index {
@@ -185,8 +118,75 @@ ul {
   text-align: center;
   margin: 20px;
   padding: 15px;
+  text-transform: uppercase;
 }
 
 footer {
   background-color: #edffc5;
+}
+
+/* INDEX ---------- */
+
+.heading-index h1,
+.heading-index p {
+  color: #edffc5;
+}
+
+.heading-index .cta {
+  color: #141329;
+  position: relative;
+  padding: 15px;
+}
+.heading-index {
+  background-image: url(/images/milkyway.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: center;
+}
+
+/* ANIMATION ---------- */
+
+.type-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.type-h1 {
+  margin: 40px 28px;
+  width: 18ch;
+  animation-name: typing;
+  animation-duration: 2s;
+  animation-timing-function: steps(18, jump-end);
+  /*animation-name: blink;
+  animation-duration: 0.7s;
+  animation-timing-function: step-end;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;*/
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 4px solid;
+  font-family: "League Spartan";
+  font-size: 2em;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 18;
+  }
+}
+
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
 }
