--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ footer {
   color: #141329;
   position: relative;
   padding: 15px;
-  bottom: -70px;
+  bottom: -10px;
 }
 
 .arrow-down {
@@ -167,6 +167,8 @@ footer {
 /* ANIMATION ---------- */
 
 .arrow-down {
+  position: absolute;
+  bottom: 20px;
   animation-name: hover;
   animation-duration: 1s;
   animation-direction: alternate;
@@ -196,17 +198,20 @@ footer {
   animation-name: typing;
   animation-duration: 2s;
   animation-timing-function: steps(18, jump-end);
-  /*animation-name: blink;
-  animation-duration: 0.7s;
-  animation-timing-function: step-end;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;*/
   white-space: nowrap;
   overflow: hidden;
   border-right: 4px solid;
   font-family: "League Spartan";
   font-size: 2em;
 }
+
+/*.type-h1 {
+  animation-name: blink;
+  animation-duration: 0.7s;
+  animation-timing-function: step-end;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}*/
 
 @keyframes typing {
   from {
