--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,16 @@ ul {
 
 footer {
   background-color: #edffc5;
+  display: flex;
+}
+
+.column {
+  flex-direction: column;
+  list-style: none;
+}
+
+.column li {
+  padding: 15px 0px;
 }
 
 /* INDEX ---------- */
