--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,7 @@ a {
   padding: 15px;
   text-transform: uppercase;
   font-size: 1.2em;
+  align-self: end;
 }
 
 nav {
@@ -353,7 +354,7 @@ nav {
   }
 
   .column {
-    margin: 0px 10%;
+    margin: 0px 6%;
   }
 }
 
