--- a/css/styles.css
+++ b/css/styles.css
@@ -160,8 +160,8 @@ footer {
   min-height: 10%;
   background-color: #edffc5;
   background-image: url(/images/scienceequipment.jpg);
-  background-size: 20%;
-  background-repeat: no-repeat;
+  background-size: 20vh;
+  background-repeat: repeat-x;
   background-position: bottom;
   display: flex;
   justify-content: space-between;
@@ -211,6 +211,15 @@ textarea {
 textarea {
   min-height: 300px;
   max-width: 100%;
+}
+
+.img2 {
+  display: none;
+}
+
+.desktop-p2,
+.desktop-p3 {
+  display: none;
 }
 
 /* INDEX ---------- */
@@ -349,7 +358,7 @@ nav {
 
 /*MID SIZE -----*/
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 900px) {
   label {
     display: none;
   }
@@ -398,7 +407,7 @@ nav {
 
   section {
     display: grid;
-    grid-template-columns: 33% 33% 33%;
+    grid-template-columns: 33.33% 33.33% 33.33%;
     margin-top: 2em;
   }
 
@@ -410,7 +419,7 @@ nav {
   }
 
   .main-card img {
-    min-height: 100px;
+    min-height: 120px;
     object-fit: cover;
   }
 
@@ -448,6 +457,60 @@ nav {
   .contact-card {
     margin: 0px;
   }
+
+  #exhibits {
+    display: grid;
+    flex-direction: row;
+    padding-top: 60px;
+    max-width: 100%;
+    max-height: 532px;
+    box-shadow: none;
+  }
+
+  #exhibits p {
+    min-width: 90%;
+  }
+
+  #exhibits a {
+    display: none;
+  }
+
+  .img1 {
+    display: none;
+  }
+
+  .img1-1 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: span 4;
+  }
+
+  .img2 {
+    display: grid;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: span 4;
+  }
+
+  .desktop-p1 {
+    display: unset;
+    grid-row: 1;
+    grid-column: 2;
+  }
+
+  .desktop-p2 {
+    display: unset;
+    grid-row: 2;
+    grid-column: 2;
+  }
+
+  .desktop-p3 {
+    display: unset;
+    grid-row: 3;
+    grid-column: 2;
+  }
 }
 
 /* MAX SIZE -----*/
@@ -467,6 +530,11 @@ nav {
   .main-card img {
     min-height: 260px;
     object-fit: cover;
+  }
+
+  .main-card .img2,
+  .main-card .img1-1 {
+    min-height: 100%;
   }
 
   .card {
