testin quality and resolution on webp

--- a/css/styles.css
+++ b/css/styles.css
@@ -269,7 +269,7 @@ textarea {
 }
 
 .heading-index {
-  background-image: url(/images/milkyway.jpg);
+  background-image: url(/images/milkyway.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
