changed all pics to webp format some cropped or redused resolution

--- a/css/styles.css
+++ b/css/styles.css
@@ -174,7 +174,7 @@ ul {
 footer {
   min-height: 10%;
   background-color: #edffc5;
-  background-image: url(/images/scienceequipment.jpg);
+  background-image: url(/images/scienceequipment.webp);
   background-size: 20vh;
   background-repeat: repeat-x;
   background-position: bottom;
