--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ header {
   justify-content: space-between;
   align-items: center;
   min-width: 100%;
+  max-width: 100%;
   position: fixed;
   top: 0px;
   z-index: 1000;
@@ -78,7 +79,6 @@ a:visited {
 p {
   font-weight: 400;
   margin: 20px 10px;
-  /*font-size: 1.2em;*/
 }
 
 img {
@@ -139,7 +139,6 @@ nav li {
 ul {
   list-style: none;
   padding-left: 0px;
-  /*padding-right: 40px;*/
 }
 
 .navigation a {
@@ -160,11 +159,8 @@ ul {
 .fas {
   font-size: 30px;
   padding-right: 10px;
+  cursor: pointer;
 }
-
-/*.heading-index {
-  top: 50px;
-}*/
 
 .main-card {
   display: grid;
@@ -181,7 +177,8 @@ footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  font-size: 1em;
+  font-size: 0.8em;
+  font-weight: 200;
 }
 
 footer a {
@@ -273,7 +270,6 @@ textarea {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  /*min-width: 100%;*/
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -292,7 +288,7 @@ textarea {
   margin: 0px auto;
   padding: 15px;
   bottom: -10px;
-  min-width: 300px;
+  min-width: 260px;
   max-width: 345px;
 }
 
@@ -395,11 +391,24 @@ nav {
 
 /* MEDIA ---------- */
 
-/*MID SIZE -----*/
-
 @media only screen and (min-width: 900px) {
   label {
     display: none;
+  }
+
+  .heading h1,
+  .heading h2,
+  .heading p {
+    margin: 10px 150px;
+  }
+
+  .heading h1 {
+    margin-top: 10%;
+  }
+
+  .heading img {
+    max-height: 600px;
+    object-fit: cover;
   }
 
   .sub-heading {
@@ -435,18 +444,10 @@ nav {
     transform: translate3d(100px 50% 5em);
   }
 
-  /*nav:hover {
-    transform: translateY(-120px);
-    transform: translateY(10px);
-  }*/
-
-  /*header:hover ~ nav {
-    transform: translateY(-80px);
-  }*/
-
   main {
     max-width: 600px;
     margin: 0px auto;
+    margin-bottom: 3%;
   }
 
   .heading {
@@ -503,34 +504,13 @@ nav {
   }
 
   #researchers img,
-  #kids img {
+  #kids img,
+  #teachers img {
     max-height: 60%;
   }
 
   #kids h2 {
     display: unset;
-  }
-
-  #moved-higlight {
-    position: unset;
-    /*top: 100%;*/
-  }
-
-  footer {
-    justify-content: center;
-  }
-
-  .column {
-    margin: 0px 6%;
-    padding-bottom: 4%;
-  }
-
-  main {
-    margin-bottom: 3%;
-  }
-
-  .contact-card {
-    margin: 0px;
   }
 
   #exhibits {
@@ -548,6 +528,23 @@ nav {
 
   #exhibits a {
     display: none;
+  }
+
+  #moved-higlight {
+    position: unset;
+  }
+
+  footer {
+    justify-content: center;
+  }
+
+  .column {
+    margin: 0px 6%;
+    padding-bottom: 4%;
+  }
+
+  .contact-card {
+    margin: 0px;
   }
 
   .img1 {
@@ -591,11 +588,7 @@ nav {
   .mobile-p2 {
     display: none;
   }
-}
 
-/* MAX SIZE -----*/
-
-@media only screen and (min-width: 900px) {
   main,
   .heading,
   .heading-index {
@@ -627,25 +620,6 @@ nav {
     object-fit: cover;
   }
 
-  /*#roboticsandai,
-  #ecology {
-    grid-row: 1;
-    grid-column: 3;
-    max-height: 50%;
-  }
-
-  #roboticsandai {
-    align-self: start;
-  }
-
-  #ecology {
-    align-self: end;
-  }
-
-  #ecology img {
-    max-height: 150px;
-  }*/
-
   #contact {
     margin: 10px;
   }
@@ -654,26 +628,7 @@ nav {
     align-items: stretch;
   }
 
-  .heading img {
-    max-height: 600px;
-    object-fit: cover;
-  }
-
-  .heading h1,
-  .heading h2,
-  .heading p {
-    margin: 10px 150px;
-  }
-
-  .heading h1 {
-    margin-top: 10%;
-  }
-
   textarea {
     min-height: 510px;
-  }
-
-  main {
-    margin-bottom: 3%;
   }
 }
