removing, rearranging and cleaning code

--- a/css/styles.css
+++ b/css/styles.css
@@ -472,6 +472,47 @@ nav {
     object-fit: cover;
   }
 
+  main,
+  .heading,
+  .heading-index {
+    max-width: 1236px;
+    margin: 0px auto;
+  }
+
+  header {
+    justify-content: flex-start;
+  }
+
+  .main-card img {
+    min-height: 260px;
+    object-fit: cover;
+  }
+
+  .main-card .img2,
+  .main-card .img1-1 {
+    min-height: 100%;
+  }
+
+  .card {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card img {
+    flex-grow: 2;
+    object-fit: cover;
+  }
+
+  textarea {
+    min-height: 510px;
+  }
+
+  footer {
+    justify-content: center;
+  }
+
+  /* SPESIFICS ---------- */
+
   #roboticsandai,
   #ecology {
     grid-row: 1;
@@ -503,10 +544,10 @@ nav {
     transform: translateY(0%);
   }
 
-  #researchers img,
+  /*#researchers img,
   #kids img,
   #teachers img {
-    max-height: 60%;
+    max-height: 60%;*/
   }
 
   #kids h2 {
@@ -534,8 +575,12 @@ nav {
     position: unset;
   }
 
-  footer {
-    justify-content: center;
+  #contact {
+    margin: 10px;
+  }
+
+  #contact textarea {
+    align-items: stretch;
   }
 
   .column {
@@ -587,48 +632,5 @@ nav {
   .mobile-p1,
   .mobile-p2 {
     display: none;
-  }
-
-  main,
-  .heading,
-  .heading-index {
-    max-width: 1236px;
-    margin: 0px auto;
-  }
-
-  header {
-    justify-content: flex-start;
-  }
-
-  .main-card img {
-    min-height: 260px;
-    object-fit: cover;
-  }
-
-  .main-card .img2,
-  .main-card .img1-1 {
-    min-height: 100%;
-  }
-
-  .card {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .card img {
-    flex-grow: 2;
-    object-fit: cover;
-  }
-
-  #contact {
-    margin: 10px;
-  }
-
-  #contact textarea {
-    align-items: stretch;
-  }
-
-  textarea {
-    min-height: 510px;
   }
 }
