--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,7 @@ p {
 
 img {
   max-width: 100%;
+  height: 100%;
 }
 
 .logo {
@@ -601,6 +602,7 @@ nav {
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: span 4;
+    height: 100%;
   }
 
   .img2 {
