--- a/css/styles.css
+++ b/css/styles.css
@@ -547,8 +547,8 @@ nav {
   /*#researchers img,
   #kids img,
   #teachers img {
-    max-height: 60%;*/
-  }
+    max-height: 60%;
+  }*/
 
   #kids h2 {
     display: unset;
