--- a/css/styles.css
+++ b/css/styles.css
@@ -511,7 +511,7 @@ nav {
     justify-content: center;
   }
 
-  /* SPESIFICS ---------- */
+  /* SPECIFICS ---------- */
 
   #roboticsandai,
   #ecology {
