--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,11 @@ header {
   justify-content: space-between;
 }
 
+.logo {
+  padding-top: 25px;
+  min-width: 150%;
+}
+
 .csm {
   font-size: 1.4em;
   padding-top: 2%;
@@ -72,6 +77,12 @@ a {
   margin: 40px 10px;
 }
 
+a {
+  color: #141329;
+  text-decoration: none;
+  font-size: 1.2em;
+}
+
 a:visited {
   color: #0e0e0c;
 }
@@ -85,22 +96,8 @@ img {
   max-width: 100%;
 }
 
-.logo {
-  padding-top: 25px;
-  min-width: 150%;
-}
-
-a {
-  color: #141329;
-  text-decoration: none;
-  font-size: 1.2em;
-}
-
 .highlight {
   background-color: #edffc5;
-}
-
-.highlight {
   padding: 20px 10px;
   margin: 0%;
 }
@@ -163,11 +160,6 @@ ul {
   cursor: pointer;
 }
 
-.main-card {
-  display: grid;
-  box-shadow: 0px 2px 2px #afafaf;
-}
-
 footer {
   min-height: 10%;
   background-color: #edffc5;
@@ -195,6 +187,8 @@ footer a {
 .column li {
   padding: 10px 0px;
 }
+
+/* SPECIFICS ---------- MOBILE */
 
 #contact {
   display: flex;
@@ -302,6 +296,11 @@ textarea {
   align-self: center;
 }
 
+.main-card {
+  display: grid;
+  box-shadow: 0px 2px 2px #afafaf;
+}
+
 /* ANIMATION ---------- */
 
 .cta:hover,
@@ -392,7 +391,7 @@ nav {
 
 /* MEDIA ---------- */
 
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 1000px) {
   label {
     display: none;
   }
@@ -512,7 +511,7 @@ nav {
     justify-content: center;
   }
 
-  /* SPECIFICS ---------- */
+  /* SPECIFICS ---------- DESKTOP */
 
   #roboticsandai,
   #ecology {
