--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,7 @@ img {
 
 nav {
   background-color: #edffc5;
-  padding: 0px 20px;
+  padding: 0px 30px 10px 30px;
   position: fixed;
   top: 50px;
   right: 0px;
