--- a/css/styles.css
+++ b/css/styles.css
@@ -464,7 +464,7 @@ nav {
   .card {
     max-width: 100%;
     margin: 10px;
-    max-height: 800px;
+    max-height: 120vh;
   }
 
   .main-card img {
